# law-study

./: .env  .mcp.json  AGENTS.md  ANALYSIS_REPORT.md  CLAUDE.md  CODEX_ANALYSIS.md  CODEX_TASK_ERROR_HANDLING.md  DEPLOY.md  GITHUB_ISSUES.md  MCP-SETUP.md  README.md  chatgpt-mcp-settings.json  chatgpt-setup.md  pyproject.toml  pytest.ini  render-deploy.md  render.yaml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  refactoring.md  test_coverage.md
.omx/: metrics.json
.omx/logs/: hooks-2026-03-14.jsonl  turns-2026-03-14.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
src/: __init__.py  main.py
src/config/: settings.py
src/core/: __init__.py  container.py  error_handler.py  exceptions.py  logging_config.py
src/middleware/: __init__.py  request_logging.py
src/models/: __init__.py  schemas.py
src/repositories/: __init__.py  administrative_appeal_repository.py  administrative_rule_repository.py  base.py  committee_decision_repository.py  compliance_calendar.py  compliance_checklists.py  constitutional_decision_repository.py  generic_api_repository.py  law_comparison_repository.py  law_detail.py  law_interpretation_repository.py  law_repository.py  law_search.py  local_ordinance_repository.py  precedent_repository.py  special_administrative_appeal_repository.py
src/routes/: http_routes.py  mcp_routes.py  (+1 more)
tests/: __init__.py  conftest.py  test_compliance.py  test_error_handling.py  test_fallback.py  test_integration.py  test_query_planner.py  test_search_precedent.py  test_services.py
(+18 files in other folders)
